@@ -1,22 +1,22 @@
 package org.nico.ratel.landlords.server.event;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
-import org.nico.ratel.landlords.entity.ServerTransferData;
+import org.nico.ratel.landlords.entity.ClientSide;
 import org.nico.ratel.landlords.enums.ServerEventCode;
 
-import io.netty.channel.Channel;
+public interface ServerEventListener {
 
-public interface ServerEventListener<T> {
-
-	public void call(Channel channel, ServerTransferData<T> serverTransferData);
+	public void call(ClientSide client, String data);
 
 	public final static Map<ServerEventCode, ServerEventListener> LISTENER_MAP = new HashMap<>();
 	
 	final static String LISTENER_PREFIX = "org.nico.ratel.landlords.server.event.ServerEventListener_";
 	
-	public static ServerEventListener<?> get(ServerEventCode code){
+	@SuppressWarnings("unchecked")
+	public static ServerEventListener get(ServerEventCode code){
 		ServerEventListener listener = null;
 		try {
 			if(ServerEventListener.LISTENER_MAP.containsKey(code)){
@@ -24,7 +24,11 @@ public interface ServerEventListener<T> {
 			}else{
 				String eventListener = LISTENER_PREFIX + code.name();
 				Class<ServerEventListener> listenerClass = (Class<ServerEventListener>) Class.forName(eventListener);
-				listener = listenerClass.newInstance();
+				try {
+					listener = listenerClass.getDeclaredConstructor().newInstance();
+				} catch (InvocationTargetException | NoSuchMethodException e) {
+					e.printStackTrace();
+				}
 				ServerEventListener.LISTENER_MAP.put(code, listener);
 			}
 			return listener;
